--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             </div>
         </div>
     </div>
+
+    <footer>
+        <div class="info">
+            Made with 💜 by <a href="https://github.com/Camilo318" title="GitHub" target="_blank">Camilo Perilla</a>
+        </div>
+        <div class="attribution">
+            <div>Icons made by <a href="http://www.roundicons.com/" title="Roundicons Freebies">Roundicons Freebies</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
+        </div>
+    </footer>
     <script src="main.js"></script>
 </body>
 </html>
