--- a/index.html
+++ b/index.html
@@ -151,6 +151,10 @@
         </div>
     </div>
 
+    <div class="gotcha" id="successIndicator">
+        <img src="img/gotcha.png" alt="Success Indicator">
+    </div>
+
     <footer>
         <div class="info">
             Made with 💜 by <a href="https://github.com/Camilo318" title="GitHub" target="_blank">Camilo Perilla</a>
