Add parcel bundler
* Init yarn project
* Add .gitignore
* Set up parcel

--- a/src/index.html
+++ b/src/index.html
@@ -7,12 +7,12 @@
       content="width=device-width, initial-scale=1.0"
     />
     <title>Pokemon Card</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="icon" type="image/x-icon" href="/img/new.png" />
+    <link rel="icon" type="image/x-icon" href="./img/new.png" />
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
   </head>
   <body>
@@ -24,136 +24,152 @@
       </div>
       <div class="game__card">
         <div class="card__back card__face">
-          <img src="img/new.png" alt="" />
+          <img src="./img/new.png" alt="" />
         </div>
         <div class="card__front card__face">
-          <img src="img/squirtle.png" alt="" class="card__value" />
+          <img src="./img/squirtle.png" alt="" class="card__value" />
         </div>
       </div>
       <div class="game__card">
         <div class="card__back card__face">
-          <img src="img/new.png" alt="" />
+          <img src="./img/new.png" alt="" />
         </div>
         <div class="card__front card__face">
-          <img src="img/bulbasaur.png" alt="" class="card__value" />
+          <img src="./img/bulbasaur.png" alt="" class="card__value" />
         </div>
       </div>
       <div class="game__card">
         <div class="card__back card__face">
-          <img src="img/new.png" alt="" />
+          <img src="./img/new.png" alt="" />
         </div>
         <div class="card__front card__face">
-          <img src="img/bulbasaur.png" alt="" class="card__value" />
+          <img src="./img/bulbasaur.png" alt="" class="card__value" />
         </div>
       </div>
       <div class="game__card">
         <div class="card__back card__face">
-          <img src="img/new.png" alt="" />
+          <img src="./img/new.png" alt="" />
         </div>
         <div class="card__front card__face">
-          <img src="img/charmander.png" alt="" class="card__value" />
+          <img
+            src="./img/charmander.png"
+            alt=""
+            class="card__value"
+          />
         </div>
       </div>
       <div class="game__card">
         <div class="card__back card__face">
-          <img src="img/new.png" alt="" />
+          <img src="./img/new.png" alt="" />
         </div>
         <div class="card__front card__face">
-          <img src="img/charmander.png" alt="" class="card__value" />
+          <img
+            src="./img/charmander.png"
+            alt=""
+            class="card__value"
+          />
         </div>
       </div>
       <div class="game__card">
         <div class="card__back card__face">
-          <img src="img/new.png" alt="" />
+          <img src="./img/new.png" alt="" />
         </div>
         <div class="card__front card__face">
-          <img src="img/eevee.png" alt="" class="card__value" />
+          <img src="./img/eevee.png" alt="" class="card__value" />
         </div>
       </div>
       <div class="game__card">
         <div class="card__back card__face">
-          <img src="img/new.png" alt="" />
+          <img src="./img/new.png" alt="" />
         </div>
         <div class="card__front card__face">
-          <img src="img/eevee.png" alt="" class="card__value" />
+          <img src="./img/eevee.png" alt="" class="card__value" />
         </div>
       </div>
       <div class="game__card">
         <div class="card__back card__face">
-          <img src="img/new.png" alt="" />
+          <img src="./img/new.png" alt="" />
         </div>
         <div class="card__front card__face">
-          <img src="img/jigglypuff.png" alt="" class="card__value" />
+          <img
+            src="./img/jigglypuff.png"
+            alt=""
+            class="card__value"
+          />
         </div>
       </div>
       <div class="game__card">
         <div class="card__back card__face">
-          <img src="img/new.png" alt="" />
+          <img src="./img/new.png" alt="" />
         </div>
         <div class="card__front card__face">
-          <img src="img/jigglypuff.png" alt="" class="card__value" />
+          <img
+            src="./img/jigglypuff.png"
+            alt=""
+            class="card__value"
+          />
         </div>
       </div>
       <div class="game__card">
         <div class="card__back card__face">
-          <img src="img/new.png" alt="" />
+          <img src="./img/new.png" alt="" />
         </div>
         <div class="card__front card__face">
-          <img src="img/pikachu.png" alt="" class="card__value" />
+          <img src="./img/pikachu.png" alt="" class="card__value" />
         </div>
       </div>
       <div class="game__card">
         <div class="card__back card__face">
-          <img src="img/new.png" alt="" />
+          <img src="./img/new.png" alt="" />
         </div>
         <div class="card__front card__face">
-          <img src="img/pikachu.png" alt="" class="card__value" />
+          <img src="./img/pikachu.png" alt="" class="card__value" />
         </div>
       </div>
       <div class="game__card">
         <div class="card__back card__face">
-          <img src="img/new.png" alt="" />
+          <img src="./img/new.png" alt="" />
         </div>
         <div class="card__front card__face">
-          <img src="img/psyduck.png" alt="" class="card__value" />
+          <img src="./img/psyduck.png" alt="" class="card__value" />
         </div>
       </div>
       <div class="game__card">
         <div class="card__back card__face">
-          <img src="img/new.png" alt="" />
+          <img src="./img/new.png" alt="" />
         </div>
         <div class="card__front card__face">
-          <img src="img/psyduck.png" alt="" class="card__value" />
+          <img src="./img/psyduck.png" alt="" class="card__value" />
         </div>
       </div>
       <div class="game__card">
         <div class="card__back card__face">
-          <img src="img/new.png" alt="" />
+          <img src="./img/new.png" alt="" />
         </div>
         <div class="card__front card__face">
-          <img src="img/snorlax.png" alt="" class="card__value" />
+          <img src="./img/snorlax.png" alt="" class="card__value" />
         </div>
       </div>
       <div class="game__card">
         <div class="card__back card__face">
-          <img src="img/new.png" alt="" />
+          <img src="./img/new.png" alt="" />
         </div>
         <div class="card__front card__face">
-          <img src="img/snorlax.png" alt="" class="card__value" />
+          <img src="./img/snorlax.png" alt="" class="card__value" />
         </div>
       </div>
       <div class="game__card">
         <div class="card__back card__face">
-          <img src="img/new.png" alt="" />
+          <img src="./img/new.png" alt="" />
         </div>
         <div class="card__front card__face">
-          <img src="img/squirtle.png" alt="" class="card__value" />
+          <img src="./img/squirtle.png" alt="" class="card__value" />
         </div>
       </div>
     </div>
 
     <div class="gotcha" id="successIndicator">
-      <img src="img/gotcha.png" alt="Success Indicator" />
+      <img src="./img/gotcha.png" alt="Success Indicator" />
     </div>
 
     <footer>
@@ -181,8 +197,6 @@
         </div>
       </div>
     </footer>
-    <script src="./AudioController.js"></script>
-    <script src="./Game.js"></script>
-    <script src="./main.js"></script>
+    <script src="./main.js" type="module"></script>
   </body>
 </html>
